<resources>
    <string name="app_name">JEDI App</string>

    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="already_member">Already a member? Login</string>

    <string name="game">Game</string>
    <string name="memory">Memory</string>
    <string name="ranquing">Ranquing</string>
    <string name="intents">Num. attempts</string>
    <string name="restart">Restart</string>
    <string name="numCards">Num. cards</string>
    <string name="complete">Complete!</string>
    <string name="alert_mss">Your final score is</string>
    <string name="ok">Ok</string>
    <string name="dos_cards">2x2 cards</string>
    <string name="cua_cards">4x4 cards</string>
    <string name="sis_cards">6x6 cards</string>
    <string name="vui_cards">8x8 cards</string>

    <string name="calculator">Calculator</string>
    <string name="notifications">Type Notifications</string>
    <string name="toasts">Toast</string>
    <string name="state">State</string>
    <string name="phone">Call</string>
    <string name="browser">Browser</string>

    <string name="music">Music</string>

    <string name="profile">Profile</string>
    <string name="street">Street</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="change">Change</string>
    <string name="reproduce_music">Reproducing song</string>
    <string name="newGame">Do you want to restart the game?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="snack">SnackBar</string>
    <string name="welcome">Welcome</string>

</resources>
