<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_comment_alert"
        android:title="@string/notifications"
        android:orderInCategory="1"
        app:showAsAction="always">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/toasts"
                android:title="@string/toasts" />
            <item
                android:id="@+id/state"
                android:title="@string/state" />
            <item
                android:id="@+id/snack"
                android:title="@string/snack" />
        </menu>
    </item>

    <item
        android:id="@+id/phone"
        android:icon="@drawable/ic_call_back"
        android:title="@string/phone"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/browser"
        android:icon="@drawable/ic_google_chrome"
        android:orderInCategory="3"
        android:title="@string/browser"
        app:showAsAction="always" />

</menu>