<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_human"
            android:title="@string/profile" />
        <item
            android:id="@+id/menu_music"
            android:icon="@drawable/ic_music_box"
            android:title="@string/music" />
        <item
            android:id="@+id/menu_game"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/game" />
        <item
            android:id="@+id/menu_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculator" />

        <item
            android:id="@+id/navigation_subheader"
            android:title="Other options">
            <menu>
                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </menu>
        </item>
    </group>
</menu>